--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -16,17 +16,28 @@
   }
 }
 
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-
 }
 
 .hero_animation {
-  background-image: linear-gradient(147.92deg,
-      hsla(239, 76%, 53%, 0.456) 10.41%,
-      hsla(0, 0%, 100%, 0) 89.25%);
+  background-image: linear-gradient(147.92deg, hsla(239, 76%, 53%, 0.456) 10.41%, hsla(0, 0%, 100%, 0) 89.25%);
   animation: changeBackgroundColor 8s infinite alternate;
 }
+
+.text-gradient {
+  background: linear-gradient(90deg, #3e7fd9 2.34%, #5c3bd6 100.78%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+}
+
 
 @keyframes changeBackgroundColor {
 
@@ -78,16 +89,10 @@ body {
   }
 
   100% {
-    transform: translateX(-2px);
+    transform: translateX(0);
   }
 }
 
 .shake {
   animation: shake 0.5s ease-in-out;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
